fetch the application details application name icon package name

--- a/app/src/main/res/layout/app_list_with_package.xml
+++ b/app/src/main/res/layout/app_list_with_package.xml
@@ -5,22 +5,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/image_materialCardView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="8dp"
-        style="@style/Widget.Material3.CardView.Elevated"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:id="@+id/app_icon"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="center"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="@id/guideline_start"
+            android:layout_marginVertical="8dp"
             app:srcCompat="@drawable/ic_launcher_background" />
-    </com.google.android.material.card.MaterialCardView>
+
+
 
     <TextView
         android:id="@+id/applicationName"
@@ -29,9 +26,11 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/alata"
         android:text="@string/_dot"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/image_materialCardView"
-        app:layout_constraintTop_toTopOf="@id/image_materialCardView" />
+        android:ellipsize="end"
+        android:singleLine="true"
+        app:layout_constraintEnd_toEndOf="@id/guideline_end"
+        app:layout_constraintStart_toEndOf="@id/app_icon"
+        app:layout_constraintTop_toTopOf="@id/app_icon" />
 
     <TextView
         android:id="@+id/packageName"
@@ -39,9 +38,28 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/alata"
         android:text="@string/_dot"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:ellipsize="end"
+        android:singleLine="true"
+        app:layout_constraintEnd_toEndOf="@id/guideline_end"
         app:layout_constraintStart_toStartOf="@id/applicationName"
         app:layout_constraintTop_toBottomOf="@id/applicationName"/>
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="8dp"/>
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="8dp" />
+
 
 
 
