fetch recyclerview item..

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,10 @@
         android:hint="@string/search_app"
         app:layout_anchor="@id/search_bar">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </com.google.android.material.search.SearchView>
 
